fix: 去掉ie下scrollbar的问题

--- a/src/components/layout/common.less
+++ b/src/components/layout/common.less
@@ -2,6 +2,7 @@
 :global{
   html{
     body{
+      -ms-overflow-style: none;
       height: 100%;
       // overflow-y: hidden;
       font-family: '微软雅黑,Sansation Light,Helvetica Neue,Helvetica,Arial,sans-serif';
@@ -50,6 +51,10 @@
               color: #67bffc;
             }
             .ant-select-selection-selected-value{
+              color: #5994d6;
+            }
+            .ant-select-selection__clear{
+              background-color: #0d5990;
               color: #5994d6;
             }
           }
